# simulacrum-self-host

./: README.md  docker-compose-external-db.yaml  docker-compose.yaml
rusty-backend/: .gitignore  Cargo.toml  Dockerfile  config.env  config.sample.json  migrate.rs
rusty-backend/.sqlx/: query-07791dcfad62e94a01c0b945e394506af8de2c2136d15f820922120fb128f5d2.json  query-07a5714ffe6c00b3534248bed5055b7a8eb10ecd103d59a8c46ecfef52458a7f.json  query-1897ca9f3c07aeb01a4ba60a7ae53504d52be7c4464367f9ef311b2ca5d05996.json  query-437009909a90eda2b4459974fda067a8e3feca8238da265e0c6fabcf403dd1b8.json  query-877474c2aa2d457658eb7d26fb486bd2feb989d28a0febb44d8000705fbc4cdd.json  query-9b6ddf733fa95e8990633579ef1b73a9aeddc6a2a30d2da34f2d569f5f87607c.json  query-b31d347127caab6d3832dbfc408720bf6d3ac44ae7cd4c4b2cc819488b8864ec.json  query-b90a503071b96dc7976e1f5c206a7d6f475ccb79f1bc7a95f11ebf3531d1eb56.json  query-c969357ccd422fb57c9778514c0750ee2b8c0f4649ffe2e18de51ebc09b8a805.json  query-caa068f13518e347afb1c8684677bdb296c4b428c976215d7b01aca99bd82364.json  query-dd81dd23dfc9bd2f7b6a722f4d5c266f7a1b887bcc954686194a51efd97ceb3e.json  query-e91914bb77911d69a73fa992cc204cf9a650456e2728e1862d02d67c356a452b.json  query-ee12f6d736d3baea6c17f9d7861d69ed5a90986957e2a50a2027e090704801b7.json  query-f330fe20d45af39c2c2557ae682ce7ef3466fce1df2a1d77471ec57e6e96bb65.json  query-f905e0834edc7954a39f0ece94f469db003f8ea7411bef1c68141619000b5f18.json  query-fadcf18218f3f4c684748d75a65675d378bbcc47ad5b742a21fec3adf2271749.json
rusty-backend/migrations/: 20231128215915_projects.sql  20240123150316_projects_trigger.sql  20240128180053_embeds.sql  20240427120642_project_templates.sql  (+2 more)
rusty-backend/src/: lib.rs  (+3 more)
(+159 files in other folders)
